Fixed 1k reset resistor to 10k

--- a/din_meter_atm90e36.html
+++ b/din_meter_atm90e36.html
@@ -145,7 +145,7 @@ hr{
                 <strong>Comment 2<h1> </h1></strong>
                 <strong>Comment 3<h1> </h1></strong>
                 <strong>Comment 4<h1> </h1></strong>
-                <strong>Total Parts<h1> 72 (Unique 11)</h1></strong>
+                <strong>Total Parts<h1> 72 (Unique 12)</h1></strong>
             </div>
 
             <div class="group_head"><div class="partRow"><div class='Head HeadRefTag'>Ref</div><div class='Head HeadQtyTag'>Qty</div><div class='Head HeadValueTag'>Value</div><div class='Head HeadFootprintTag'>Footprint</div><div class='Head <!--HEADER_CLASS_FOOTPRINT_TAG-->'>manf#</div></div></div>
@@ -268,8 +268,8 @@ hr{
 <hr>
 <div class="group">
 	<div class="partRow RowOddTag">
-    <div class="column HeadRefTag">R1 R2 R4 R11 R12 R13 R14 R15 R16 R17 R18 R6 R7 R9 R8 R19 R20 R21 R22 R23 R24 R25 R26 </div>
-    <div class="column HeadQtyTag">23</div>
+    <div class="column HeadRefTag">R1 R2 R4 R11 R12 R13 R14 R15 R16 R17 R18 R6 R7 R9 R19 R20 R21 R22 R23 R24 R25 R26 </div>
+    <div class="column HeadQtyTag">22</div>
     <div class="column HeadValueTag">1K</div>
     <div class="column HeadFootprintTag">Resistors_SMD:R_0402</div>
     
@@ -285,6 +285,15 @@ hr{
 <div class="column FiledClass Field_manf#"> </div>
 
 </div>
+<div class="partRow RowOddTag">
+    <div class="column HeadRefTag">R8 </div>
+    <div class="column HeadQtyTag">1</div>
+    <div class="column HeadValueTag">10K</div>
+    <div class="column HeadFootprintTag">Resistors_SMD:R_0402</div>
+    
+<div class="column FiledClass Field_manf#"> </div>
+
+</div>
 
 </div>
 <hr>
@@ -293,7 +302,7 @@ hr{
 </div>
 <hr>
 <div class="group">
-	<div class="partRow RowOddTag">
+	<div class="partRow RowEvenTag">
     <div class="column HeadRefTag">Y1 Y2 </div>
     <div class="column HeadQtyTag">2</div>
     <div class="column HeadValueTag">Crystal_GND24</div>
@@ -307,7 +316,7 @@ hr{
 
             <hr>
 
-            <div class="group footer"><h1>BOM made with <a href="https://github.com/HashDefineElectronics/KiCad_BOM_Wizard">KICAD_BOM_WIZARD</a><br>(Generated 10/02/2018 2:44:39 PM)</h1></div>
+            <div class="group footer"><h1>BOM made with <a href="https://github.com/HashDefineElectronics/KiCad_BOM_Wizard">KICAD_BOM_WIZARD</a><br>(Generated 10/02/2018 3:00:05 PM)</h1></div>
         </div>
     </div>
 </body>
